[metadata]
name = SRRS
version = 0.01
author = Rob Bierman
author_email = rbierman@stanford.edu
description = Subcellular RNA Ranked Statistics
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.0
    pandas >= 1.0
    h5py >= 2.0,<3.0

[options.packages.find]
where = src

