[metadata]
name = SRRS
version = 0.01
author = Rob Bierman
author_email = rbierman@stanford.edu
description = Subcellular RNA Ranked Statistics
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    numpy == 1.22.1
    pandas == 1.3.5
    scipy == 1.7.3
    statsmodels == 0.13.1
    shapely == 1.8.0
    matplotlib == 3.5.1
    seaborn == 0.11.2
    h5py == 2.10.0
    importlib_resources == 5.4.0
    click == 8.1.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    srrs = SRRS.command_line:srrs

