[metadata]
name = subcellular-sprawl
version = 0.05
author = Rob Bierman
author_email = rbierman@stanford.edu
description = Subcellular Patterning Ranked Analysis With Labels
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.6.1
install_requires =
    numpy >= 1.19
    pandas >= 1.1
    scipy >= 1.5
    statsmodels >= 0.12
    shapely >= 1.8
    matplotlib >= 3.3
    seaborn >= 0.11
    h5py >= 2.10
    importlib_resources >= 5.4
    click >= 8.0
    pysam >= 0.19

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    sprawl = sprawl.command_line:sprawl

